# Triglyceride-Localization-via-Edge-Triggered-Segmentation-System_MacOS

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  main.yml
scripts/: build_mac.sh
